# Copyright (c) 2019 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#################### list the subdirectories ####################

add_subdirectory(ctsam)
add_subdirectory(ctsav)
add_subdirectory(escsv)
add_subdirectory(functor)
add_subdirectory(range)
add_subdirectory(rtsam)
add_subdirectory(rtsav)
add_subdirectory(scv)
add_subdirectory(sm)
add_subdirectory(sms)
add_subdirectory(srv)
add_subdirectory(submatrix)
add_subdirectory(subsequence)
add_subdirectory(uscsv)
