# Copyright (c) 2019 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#################### list the subdirectories ####################

add_subdirectory(absolute)
add_subdirectory(and)
add_subdirectory(append)
add_subdirectory(apply)
add_subdirectory(apply_at)
add_subdirectory(at)
add_subdirectory(bidiag)
add_subdirectory(columns)
add_subdirectory(contains)
add_subdirectory(diag)
add_subdirectory(divide)
add_subdirectory(equal)
add_subdirectory(expand)
add_subdirectory(first)
add_subdirectory(fold1)
add_subdirectory(fold1_left)
add_subdirectory(fold_left)
add_subdirectory(greater)
add_subdirectory(greater_equal)
add_subdirectory(horzcat)
add_subdirectory(id)
add_subdirectory(if)
add_subdirectory(indices)
add_subdirectory(insert)
add_subdirectory(invoke)
add_subdirectory(iterate)
add_subdirectory(last)
add_subdirectory(less)
add_subdirectory(less_equal)
add_subdirectory(m)
add_subdirectory(maximum)
add_subdirectory(mean)
add_subdirectory(minus)
add_subdirectory(modulo)
add_subdirectory(multiply)
add_subdirectory(n)
add_subdirectory(not)
add_subdirectory(not_equal)
add_subdirectory(or)
add_subdirectory(pca)
add_subdirectory(pca_filter)
add_subdirectory(plus)
add_subdirectory(postdecrement)
add_subdirectory(postincrement)
add_subdirectory(power)
add_subdirectory(predecrement)
add_subdirectory(preincrement)
add_subdirectory(recurse)
add_subdirectory(rows)
add_subdirectory(second)
add_subdirectory(select)
add_subdirectory(signum)
add_subdirectory(size)
add_subdirectory(sum)
add_subdirectory(svd)
add_subdirectory(times)
add_subdirectory(transform)
add_subdirectory(transpose)
add_subdirectory(vertcat)
add_subdirectory(where)
add_subdirectory(zip)
