# Copyright (c) 2019 Jakob Meng, <jakobmeng@web.de>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
#

#################### list the subdirectories ####################

add_subdirectory(absolute)
add_subdirectory(almost_equal)
add_subdirectory(append)
add_subdirectory(apply)
add_subdirectory(apply_at)
add_subdirectory(at)
add_subdirectory(bidiag)
add_subdirectory(columns)
add_subdirectory(contains)
add_subdirectory(diag)
add_subdirectory(divide)
add_subdirectory(expand)
add_subdirectory(first)
add_subdirectory(fold1)
add_subdirectory(fold1_left)
add_subdirectory(fold_left)
add_subdirectory(givens)
add_subdirectory(if)
add_subdirectory(insert)
add_subdirectory(invoke)
add_subdirectory(iterate)
add_subdirectory(m)
add_subdirectory(mean)
add_subdirectory(minus)
add_subdirectory(multiply)
add_subdirectory(n)
add_subdirectory(pca)
add_subdirectory(pca_filter)
add_subdirectory(plus)
add_subdirectory(power)
add_subdirectory(rdivide)
add_subdirectory(recurse)
add_subdirectory(rows)
add_subdirectory(second)
add_subdirectory(select)
add_subdirectory(signum)
add_subdirectory(size)
add_subdirectory(sum)
add_subdirectory(svd)
add_subdirectory(times)
add_subdirectory(transform)
add_subdirectory(transpose)
add_subdirectory(variance)
add_subdirectory(vertcat)
add_subdirectory(where)
add_subdirectory(zip)
